--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-    <title>Filmopedia</title>
+    <title>TMDb</title>
   </head>
   <body>
     <div id="root"></div>
